styling: fixed contrast issues

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
   border: none;
   font-family: 'Geneva', sans-serif;
-  background-color: #374b47;
+  background-color: #4f6a65;
   text-align: center;
 }
 
@@ -15,6 +15,7 @@ h1 {
 }
 
 h2 {
+  font-size: 24px;
   padding: 10px;
 }
 
@@ -55,12 +56,14 @@ form {
 
 form label {
   padding-top: 10px;
+  font-weight: bold;
+  font-size: 16px;
 }
 
 form input {
   align-self: center;
   width: 15vw;
-  height: 3vw;
+  height: 2.5vw;
   background-color: #95dcde6c;
   box-shadow: 2px 2px 5px #04231d44;
 }
